--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
-<html>
-    
+<html lang="en">
     <head>
-        <title>Page Title</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Understanding TypeScript</title>
+        <script src="js-only.js" defer></script>
     </head>
-
     <body>
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
+        <input type="number" id="num1" placeholder="Number 1" />
+        <input type="number" id="num2" placeholder="Number 2" />
+        <button>Add!</button>
     </body>
-
 </html>
